smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/trait-targets/trait-on-eof.smithy
// Parse error at line 5, column 1 near `[EOF]`: Expected a valid identifier character, but found '[EOF]'
namespace com.foo

@deprecated
